# fastapi-tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/instructions/: fastapi-review.instructions.md
app/: database.py  logging_config.py  main.py  middleware.py
app/application/use_cases/: author.py  book.py  dapr.py  dpar.py
app/config/: __init__.py  base.py  local.py  log_config.local.json  log_config.production.json  production.py
app/crud/: __init__.py  author.py  book.py
app/domain/: exceptions.py
app/domain/entities/: author.py  book.py  dpar.py
app/domain/repositories/: author.py  book.py  dapr.py  dpar.py
app/infrastructure/: database.py  redis.py
app/infrastructure/models/: __init__.py  author.py  book.py
app/infrastructure/repositories/: author.py  book.py  dapr.py  dpar.py
app/models/: author.py  book.py
app/presentation/routers/: __init__.py  books.py  health.py  root.py
app/presentation/routers/v1/: health.py
app/presentation/routers/v3/: dapr.py  (+2 more)
app/presentation/schemas/: author.py  book.py  dapr.py  dpar.py
app/routers/: authors.py  books.py  root.py
app/schemas/: __init__.py  author.py  book.py
app/services/: hello.py  root.py
app/workers/: base.py  dapr.py  dpar.py  streams.py
docs/: architecture.md  openapi.yaml  project-structure.md
tests/integration/: test_root_endpoint.py  test_v2_crud.py  test_v3_dapr.py  test_v3_dpar.py
tests/unit/: test_event_worker.py  test_health_service.py  test_hello_service.py
(+1 files in other folders)
